{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 3,
  "lineage": "bf84af06-221a-9957-0aff-026ffa5c5d58",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:security-group/sg-0f24e54621fcb20ef",
            "description": "Security group for cluster ECS",
            "filter": null,
            "id": "sg-0f24e54621fcb20ef",
            "name": "cluster-fiap-pedidos-sg",
            "tags": {
              "Name": "cluster-fiap-pedidos-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782d93824dc8c902"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clustera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-0a83335ba59b9d872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private1-sa-east-1a"
                ]
              }
            ],
            "id": "subnet-0a83335ba59b9d872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private1-sa-east-1a"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clusterb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-077a4b4b6bc7989cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private2-sa-east-1b"
                ]
              }
            ],
            "id": "subnet-077a4b4b6bc7989cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private2-sa-east-1b"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clusterc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-02713ee2c4df40a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.192.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private3-sa-east-1c"
                ]
              }
            ],
            "id": "subnet-02713ee2c4df40a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private3-sa-east-1c"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:vpc/vpc-0782d93824dc8c902",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ea2b97ccc35edce4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-081bf2499d5006735",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-vpc"
                ]
              }
            ],
            "id": "vpc-0782d93824dc8c902",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063fbd742d9e9c091",
            "owner_id": "346337500368",
            "tags": {
              "Name": "cluster-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:vpc/vpc-0b4422ba2ad1bd8e3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-094334f69df56c775",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-081bf2499d5006735",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4422ba2ad1bd8e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a436747a20002357",
            "owner_id": "346337500368"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:security-group/sg-03fe81af622f283d2",
            "description": "Security group RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fe81af622f283d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f24e54621fcb20ef"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-fiap-pedidos-sg",
            "name_prefix": "",
            "owner_id": "346337500368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-fiap-pedidos-sg"
            },
            "tags_all": {
              "Name": "rds-fiap-pedidos-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782d93824dc8c902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.cluster",
            "data.aws_vpc.cluster"
          ]
        }
      ]
    }
  ]
}